--- a/02_portfolio.html
+++ b/02_portfolio.html
@@ -66,7 +66,7 @@
 				<div class="oficina-info">
 					<h1 class="oficina-titulo">Arquitectura Muerta</h1>
 					<p class="oficina-txt">Colección de fotografías de edificios intervenidas en postproducción. Frias y oscuras montañas de cemento, lejanas, misteriosas y llenas de historias y de objetos pero despojadas de humanidad: así se verán las grandes urbes en un escenario postapocalíptico, y asi se ven cuando todo calla.</p>
-					<a href="/04_portfolio_arquitectura.html" class="oficina-boton">ver galería</a>
+					<a href="04_portfolio_arquitectura.html" class="oficina-boton">ver galería</a>
 				</div>
 			</section>
 
@@ -80,7 +80,7 @@
 							un ángel que bajó del cielo fue el que los pintó"
 						</p>
 					</div>
-					<a href="/05_portfolio_jujuy.html" class="jujuy-boton">ver galería</a>
+					<a href="05_portfolio_jujuy.html" class="jujuy-boton">ver galería</a>
 			</section>
 
 			<section class="momentos-wrapper">
@@ -88,7 +88,7 @@
 					<p class="momentos-titulo">momentos</p>
 					<p class="momentos-txt">Collage de momentos eternizados en paisajes, miradas o pequeñas puestas en escena. La vida misma!
 					</p>
-					<a href="/06_portfolio_momentos.html" class="momentos-boton">ver galería</a>
+					<a href="06_portfolio_momentos.html" class="momentos-boton">ver galería</a>
 				</div>
 			</section>
 
@@ -98,7 +98,7 @@
 					<p class="camino">CAMINO</p>
 					<p class="camino-txt">Retratos de automóviles antiguos, inspirados en la tapa del disco "El Camino" de la banda estadounidense The Black Keys.
 					</p>
-					<a href="/07_portfolio_delcamino.html" class="camino-boton">ver galería</a>
+					<a href="07_portfolio_delcamino.html" class="camino-boton">ver galería</a>
 				</div>
 			</section>
 
@@ -107,7 +107,7 @@
 					<p class="impro-titulo">IMPRO</p>
 					<div class="impro-txt"><p>Fotografías tomadas durante el período 2017-2019 en El Duelo y Liga de Improvisadores. Impro platense, impro bonita, aquí y ahora!
 					</p></div>
-					<div class="impro-boton"><a href="/08_portfolio_impro.html" class="impro-boton-anchor">ver galería</a></div>
+					<div class="impro-boton"><a href="08_portfolio_impro.html" class="impro-boton-anchor">ver galería</a></div>
 				</div>
 			</section>
 		</div>
