--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<a href="img/image-22.jpg" data-lightbox="mygallery" data-title="Macamon"><img src="img/image-22.jpg" class="gallery__img" alt="Macamon"></a>
 				</figure>
 				<div class="clickaca">
-					<a class="visitame" href="/02_portfolio.html">Visita el portfolio completo!</a>
+					<a class="visitame" href="02_portfolio.html">Visita el portfolio completo!</a>
 					<svg version="1.1" class="arrow-left" xmlns="http://www.w3.org/2000/svg"
 						xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 477.175 477.175">
 						<path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"/>
