--- a/04_portfolio_arquitectura.html
+++ b/04_portfolio_arquitectura.html
@@ -87,7 +87,7 @@
 				<figure class="gallery__item gallery__item--8">
 					<a href="img/portfolio/arquitectura/arquitectura08.jpg" data-lightbox="mygallery"><img src="img/portfolio/arquitectura/arquitectura08.jpg" class="gallery__img" alt="Image 8"></a>
 				</figure>
-				<a href="/02_portfolio.html" class="volver">Volver</a>
+				<a href="02_portfolio.html" class="volver">Volver</a>
 		</main>
 		<footer>
 			<a class="mail" href="mailto:ghhernan@gmail.com">ghhernan@gmail.com</a>
