--- a/05_portfolio_jujuy.html
+++ b/05_portfolio_jujuy.html
@@ -117,7 +117,7 @@
                 <figure class="gallery__item gallery__item--18">
                     <a href="img/portfolio/jujuy/18.jpg" data-lightbox="mygallery"><img src="img/portfolio/jujuy/18.jpg" class="gallery__img" alt="Image 18"></a>
                 </figure>
-				<a href="/02_portfolio.html" class="volver">Volver</a>
+				<a href="02_portfolio.html" class="volver">Volver</a>
 		</main>
 		<footer>
 			<a class="mail" href="mailto:ghhernan@gmail.com">ghhernan@gmail.com</a>
