--- a/06_portfolio_momentos.html
+++ b/06_portfolio_momentos.html
@@ -276,7 +276,7 @@
                 <figure class="gallery__item gallery__item--72">
                     <a href="img/portfolio/momentos/72.jpg" data-lightbox="mygallery"><img src="img/portfolio/momentos/72.jpg" class="gallery__img" alt="Image 72"></a>
                 </figure>
-                <a href="/02_portfolio.html" class="volver">Volver</a>
+                <a href="02_portfolio.html" class="volver">Volver</a>
 		</main> 
 		<footer>
 			<a class="mail" href="mailto:ghhernan@gmail.com">ghhernan@gmail.com</a>
