--- a/07_portfolio_delcamino.html
+++ b/07_portfolio_delcamino.html
@@ -132,7 +132,7 @@
                 <figure class="gallery__item gallery__item--23">
                     <a href="img/portfolio/camino/23.jpg" data-lightbox="mygallery"><img src="img/portfolio/camino/23.jpg" class="gallery__img" alt="Image 23"></a>
                 </figure>
-				<a href="/02_portfolio.html" class="volver">Volver</a>
+				<a href="02_portfolio.html" class="volver">Volver</a>
 		</main> 
 		<footer>
 			<a class="mail" href="mailto:ghhernan@gmail.com">ghhernan@gmail.com</a>
