--- a/08_portfolio_impro.html
+++ b/08_portfolio_impro.html
@@ -216,7 +216,7 @@
                 <figure class="gallery__item gallery__item--53">
                     <a href="img/portfolio/impro/impro53.jpg" data-lightbox="mygallery"><img src="img/portfolio/impro/impro53.jpg" class="gallery__img" alt="Image 1"></a>
                 </figure>
-				<a href="/02_portfolio.html" class="volver">Volver</a>
+				<a href="02_portfolio.html" class="volver">Volver</a>
 		</main> 
 		<footer>
 			<a class="mail" href="mailto:ghhernan@gmail.com">ghhernan@gmail.com</a>
