--- a/03_sobremi.html
+++ b/03_sobremi.html
@@ -80,7 +80,7 @@
 						Criado al Oeste del conurbano bonaerense, en un hogar amoroso y al vaivén de las unidades del tren Sarmiento, actualmente vivo en la ciudad de Buenos Aires con mi compañera de aventuras y de vida.
 						<br>
 						<br>
-						Actualmente estoy estudiando para convertirme en desarrollador front-end y dominar más de un lenguaje de programación. También me encuentro trabajando en mis primeros scripts de automatización con Selenium y Python (podés encontrar más información en mis redes sociales).
+						Actualmente estoy estudiando programación frontend con Html+Css+JS y automation con Python y Selenium.
 						<br>
 						<br>
 						Sacar fotos es muchísimo más que apretar un botón; los y las invito a visitar mis galerías.
